regrouped modules, set version to 3.3.1
Now root is EveOnline project, children are model and programs,