@@ -1,11 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.guiguilechat.eveonline</groupId>
-	<artifactId>Common</artifactId>
-	<packaging>pom</packaging>
-	<name>EveOnline</name>
-
+	<groupId>fr.guiguilechat</groupId>
+	<artifactId>EveOnline</artifactId>
+	<version>3.3.1</version>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License v3</name>
@@ -35,7 +35,7 @@
 	</distributionManagement>
 
 	<properties>
-	<java.version>10</java.version>
+		<java.version>10</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
@@ -65,6 +65,15 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>javafx.graphics</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -121,13 +130,27 @@
 				<artifactId>slf4j-simple</artifactId>
 				<version>1.8.0-beta2</version>
 			</dependency>
+			<dependency>
+				<groupId>fr.guiguilechat.eveonline.model</groupId>
+				<artifactId>ESI</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>fr.guiguilechat.eveonline.model.sde</groupId>
+				<artifactId>SDE-Full</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<version>1.0.7</version>
 	<scm>
 		<url>https://github.com/guiguilechat/EveOnline</url>
 		<connection>scm:git:git@github.com-lechat:guiguilechat/EveOnline.git</connection>
 		<developerConnection>scm:git:git@github.com-lechat:guiguilechat/EveOnline.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
+	<packaging>pom</packaging>
+	<modules>
+		<module>model</module>
+		<module>programs</module>
+	</modules>
 </project>
